// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-1tadfoa {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
    class="efyj23m0 cache-1tadfoa e7ah3bn0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1d10tav {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="efyj23m0 cache-1d10tav e7ah3bn0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as auto 1`] = `
<DocumentFragment>
  .cache-s7j24u {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-s7j24u {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    max-width: none;
    width: auto;
  }
}

<div
    class="efyj23m0 cache-s7j24u e7ah3bn0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as bool 1`] = `
<DocumentFragment>
  .cache-1mp86q3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1mp86q3 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
  }
}

<div
    class="efyj23m0 cache-1mp86q3 e7ah3bn0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as number 1`] = `
<DocumentFragment>
  .cache-1ostkqq {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1ostkqq {
    -webkit-flex: 0 0 33.3333%;
    -ms-flex: 0 0 33.3333%;
    flex: 0 0 33.3333%;
    max-width: 33.3333%;
  }
}

<div
    class="efyj23m0 cache-1ostkqq e7ah3bn0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly without responsive when smallest breakpoint 1`] = `
<DocumentFragment>
  .cache-10f86v0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

<div
    class="efyj23m0 cache-10f86v0 e7ah3bn0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly when fluid 1`] = `
<DocumentFragment>
  .cache-eyr4d6 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="em1vjd40 cache-eyr4d6 e7ah3bn0"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-2t456c {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
}

@media (min-width: 576px) {
  .cache-2t456c {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-2t456c {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-2t456c {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-2t456c {
    max-width: 1140px;
  }
}

<div
    class="em1vjd40 cache-2t456c e7ah3bn0"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1t61igq {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 576px) {
  .cache-1t61igq {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-1t61igq {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-1t61igq {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-1t61igq {
    max-width: 1140px;
  }
}

<div
    class="em1vjd40 cache-1t61igq e7ah3bn0"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-1lmbvoj {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -32px;
  margin-right: -32px;
}

<div
    class="e1uuye5o0 cache-1lmbvoj e7ah3bn0"
  >
    Sample Row
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1561i4f {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

<div
    class="e1uuye5o0 cache-1561i4f e7ah3bn0"
  >
    Sample Row
  </div>
</DocumentFragment>
`;
